--- a/allifmaalcommonapp/templates/allifmaalcommonapp/website/engineering.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/website/engineering.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Alifmaal ERP</title>
+    <title>Engineering</title>
     <!-- Favicons back-to-top -->
     <link rel="shortcut icon" href='{% static "allifapperp/css/images/allifmaal-icon.png" %}' type="png/ico">
     <link href="{% static 'allifapperp/css/common/bootstrap.min.css' %}" rel="stylesheet">
@@ -30,14 +30,10 @@
         <nav id="navbar" class="navbar">
           <ul>
             <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-
             <li><a class="nav-link scrollto" href="#about">About</a></li>
             <li><a class="nav-link scrollto" href="#modules">Modules</a></li>
             <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li>
             <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-            <li><a class="nav-link scrollto" href="{% url 'allifmaalcommonapp:commonEngineering' %}">Engineering</a></li>
-
-            
             <li><a class="getstarted scrollto" href="{% url 'allifmaalusersapp:userLoginPage' %}">Login</a></li>
 
           </ul>
@@ -52,10 +48,10 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1">
-            <h1>Achieve your business goals with AI driven <span class="allifmaal-erp-styling">Allifmaal ERP</span>,
+            <h1>Engineering <span class="allifmaal-erp-styling">Department</span>,
              
-                the smarter way to manage your organization seamlessly.</h1>
-            <h6>Digitize your deal, discover your dreams.</h6>
+                the core of the organization.</h1>
+            <h6>Your Engineering Partner.</h6>
             <div class="d-flex justify-content-center justify-content-lg-start">
               <a href="#about" class="btn-get-started scrollto">About Allifmaal ERP</a>
              
