--- a/allifmaalcommonapp/templates/allifmaalcommonapp/banks/add-bank.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/banks/add-bank.html
@@ -6,83 +6,152 @@
 {% block style %}
 {%endblock%}
 {% block body %}
-
+<div class="allifmaal-main-container">
+ 
 <!--start....main headere-->
 <div class="card-header">
 
-  <div class="row mt-12" ><!--start....header row-->
-  
-  <div class="col-md-12"><!--start....header column-->
-  
-  <div class="container-fluid amel-content-header">
-    
+<div class="row mt-12" ><!--start....header row-->
 
-    <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-   
-    <a href="{% url 'allifmaalcommonapp:commonBanks' user_var glblslug %}">Banks</a>
+<div class="col-md-12"><!--start....header column-->
+
+<div class="container-fluid amel-content-header">
+
+  <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
+  <a href="{% url 'allifmaalcommonapp:commonBanks' user_var glblslug %}">Banks</a>
   <a href="{% url 'allifmaalcommonapp:commonAddBank' user_var glblslug %}">New Bank</a>
    
     
   <a href="{% url 'allifmaalcommonapp:commonBankShareholderDeposits' user_var glblslug %}">Deposits</a>
   <a href="{% url 'allifmaalcommonapp:commonBankWithdrawals' user_var glblslug %}">Withdrawals</a>
   
-  </div>
+
+</div>
+
+    </div><!--end....header column-->
   
-      </div><!--end....header column-->
+  </div><!--end....header row-->
+
+</div><!--end....main headere-->
+
+
+  <div class="allifmaincontainer">
+
+<div class="row mt-12"> <!--start....table row-->
+  <div class="table-details-content-description">Add/Edit New Banks</div>
+  <form method='POST' action=''>{% csrf_token %}
+  <div class="col-md-12"> <!--start....table column-->
+  <div class="allif-scroll-table">
+    <div class="allif-info-tables">
+      <div class="row"><!--start of row div --->
+  <!--start of column two-->
+  <div class="col-md-4">
     
-    </div><!--end....header row-->
-  
-  </div><!--end....main headere-->
-  
-<div class="allifmaincontainer">
+      <!--start of the table here-->
+      <div class="table-responsive">
+      <table class="table table-layout">
+      <tbody>
 
-  <div class="row mt-12"> <!--start....table row-->
-    <div class="table-details-content-description">Add New Bank</div>
-    <div class="col-md-12"><!--start of the first row body-->
-      <div class="content-description-error">{{error_message}}</div>
-        <div class="allif-form-container">
-        <form method='POST' action=''>{% csrf_token %}
-        <div class="row"><!--start of row div --->
-          <div class="col-md-4"><!--start of column 1-->
-            <div class="card shadow text-left p-3 allif-form-card" >
-            <label>Division Name</label> {{form.division}}
-            <label>Branch Name</label> {{form.branch}}
-            <label>Department Name</label> {{form.department}}
-            <label>Bank Name</label> {{form.name}}
-            
-          </div>
-            </div><!--end of column 1-->
+      <tr>
+        <td class="allif-fix-table-col">Division</td>
+        <td>{{form.division}}</td>
+    
+        </tr>
         
-            <div class="col-md-4"><!--start of column 2-->
-            <div class="card shadow text-left p-3 allif-form-card">
-            <label>Account Number</label> {{form.account}}
-            <label>Bank Balance</label> {{form.balance}}
-            <label>Deposit Balance</label> {{form.deposit}}
+        <tr>
+          <td class="allif-fix-table-col">Branch</td>
+          <td>{{form.branch}}</td>
+      
+          </tr>
+          <tr>
+            <td class="allif-fix-table-col">Department</td>
+            <td>{{form.department}}</td>
+        
+            </tr>
+            <tr>
+              <td class="allif-fix-table-col">Name</td>
+              <td>{{form.name}}</td>
+          
+              </tr>
            
-              </div>
-            </div><!--end of column 2-->
-            <div class="col-md-4"><!--start of column 3-->
-            <div class="card shadow text-left p-3 allif-form-card">
-              
-              <label>Withdrawal Balance</label> {{form.withdrawal}}
-               <label>Comments</label> {{form.comments}}
-              
-                <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn">
-       
-                </div>
-            </div><!--end of column 1-->
+        </tbody>
+        </table>
+      </div>
+        </div>
+           
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+       <!--start of the table here-->
+       <div class="allif-details-card table-responsive">
+       <table class="table table-layout">
+        <tbody>
         
-        </div><!--end of row div --->
-            </form>
-            </div>
-            </div><!--end of first row body-->
+         
+              <tr>
+                <td class="allif-fix-table-col">Account</td>
+                <td>{{form.account}}</td>
+            
+                </tr>
+            <tr>
+              <td class="allif-fix-table-col">Deposit</td>
+              <td>{{form.deposit}}</td>
+          
+              </tr>
+              <tr>
+                <td class="allif-fix-table-col">Balance</td>
+                <td>{{form.balance}}</td>
+            
+                </tr>
+          </tbody>
+          </table>
+          </div>
+          </div>
+    
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+      <div class="allif-details-card table-responsive">
+       <!--start of the table here-->
+       <table class="table table-layout">
+        <tbody>
+         
+            <tr>
+              <td class="allif-fix-table-col">Withdrawal</td>
+              <td>{{form.withdrawal}}</td>
+          
+              </tr>
+              <tr>
+                <td class="allif-fix-table-col">Comments</td>
+                <td>{{form.comments}}</td>
+            
+                </tr>
+            <tr>
+              <td class="allif-fix-table-col">Action</td>
+              <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
+          
+              </tr>
+          </tbody>
+          </table>
+  </div>
+    </div>
+    </div><!--end of row div --->
+      
+        </div>
+
 </div><!--end....table row-->
-
+</div>
+</form>
 <!--end of table-->
-
 
 </div><!--end of main container of the page....-->
 
+
+
+
+</div>
+
+</div>
   {% block scripts %}
 
   {% endblock %}
