--- a/allifmaalcommonapp/templates/allifmaalcommonapp/banks/deposits/shareholders/delete-deposit-confirm.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/banks/deposits/shareholders/delete-deposit-confirm.html
@@ -1,4 +1,3 @@
-
 {% extends 'allifmaalcommonapp/base/uimainbase/allifmaaluibase.html'%}
 {% load humanize %}
 {% block title %}
@@ -7,7 +6,8 @@
 {% block style %}
 {%endblock%}
 {% block body %}
-
+<div class="allifmaal-main-container">
+ 
 <!--start....main headere-->
 <div class="card-header">
 
@@ -16,10 +16,8 @@
 <div class="col-md-12"><!--start....header column-->
 
 <div class="container-fluid amel-content-header">
-<a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-<a href="{% url 'allifmaalcommonapp:commonBankShareholderDeposits' user_var glblslug %}">Deposits</a>
-<a href="{% url 'allifmaalcommonapp:commonSuppliers' user_var glblslug %}" >Suppliers</a>
-<a href="{% url 'allifmaalcommonapp:commonTasks' user_var glblslug %}">Tasks</a>
+  <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
+<a href="{% url 'allifmaalcommonapp:commonDivisions' user_var glblslug %}">Divisions</a>
 </div>
 
     </div><!--end....header column-->
@@ -28,168 +26,158 @@
 
 </div><!--end....main headere-->
 
+  <div class="allifmaincontainer">
 
-<!--start of main body-->
-<div class="allifmaincontainer">
-  <div class="row mt-12"> <!--start....table row-->
-    <div class="delete-confirmation-header">
-      Do you want to delete {{allifquery}}?
-  </div>
-    <div class="allif-details-container">
+<div class="row mt-12"> <!--start....table row-->
+  <div class="delete-confirmation-header">Do you want to delete {{allifquery}}?</div>
+  <div class="col-md-12"> <!--start....table column-->
+  <div class="allif-scroll-table">
+    <div class="allif-info-tables">
       <div class="row"><!--start of row div --->
-      
-        <!--start of column two-->
-        <div class="col-md-4">
-          <div class="allif-details-card ">
-            <!--start of the table here-->
-          <table class="table allif-details-table table-layout">
-            <tbody>
+  <!--start of column two-->
+  <div class="col-md-4">
+    
+      <!--start of the table here-->
+      <div class="table-responsive">
+      <table class="table table-layout">
+      <tbody>
+      <tr>
+        <td class="allif-fix-table-col">Description</td>
+        <td>{{allifquery.description}}</td>
+    
+        </tr>
+       
+        
+        </tbody>
+        </table>
+      </div>
+        </div>
+           
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+       <!--start of the table here-->
+       <div class="allif-details-card table-responsive">
+       <table class="table table-layout">
+        <tbody>
           <tr>
-            <td>Company</td>
-            <td>{{allifquery.company}}</td>
+            <td class="allif-fix-table-col">Amount</td>
+            <td>{{allifquery.amount|floatformat:2|intcomma}}</td>
         
             </tr>
-            <tr>
-            <td>Division</td>
-            <td>{{allifquery.division}}</td>
-        
-            </tr>
-            <tr>
-            <td>Branch</td>
-            <td>{{allifquery.branch}}</td>
-        
-            </tr>
-            <tr>
-              <td>Department</td>
-              <td>{{allifquery.department}}</td>
           
-              </tr>
+        
+          </tbody>
+          </table>
+          </div>
+          </div>
+    
+
+     <!--start of column two-->
+     <div class="col-md-4">
+      <div class="allif-details-card table-responsive">
+       <!--start of the table here-->
+       <table class="table table-layout">
+        <tbody>
+          <tr>
+            <td class="allif-fix-table-col">Date</td>
+            <td>{{allifquery.date}}</td>
+        
+            </tr>
           
           </tbody>
           </table>
-        
-          </div>
-              </div>
-      
-           
-       <!--start of column two-->
-       <div class="col-md-4">
-        <div class="allif-details-card ">
-          <!--start of the table here-->
-        <table class="table table-layout allif-details-table">
-          <tbody>
-        <tr>
-          <td>Description</td>
-          <td>{{allifquery.description}}</td>
-      
-          </tr>
-      
-        <tr>
-          <td>Bank</td>
-          <td>{{allifquery.bank}}</td>
-      
-          </tr>
-          <tr>
-              <td>Comments</td>
-              <td>{{allifquery.comments}}</td>
-          
-              </tr>
-       
-        <tr>
-          <td>Owner</td>
-          <td>{{allifquery.owner}}</td>
-      
-          </tr>
-         
-        </tbody>
-        </table>
+  </div>
+    </div>
+    </div><!--end of row div --->
       
         </div>
-            </div>
-      
-      
-       <!--start of column two-->
-       <div class="col-md-4">
-        <div class="allif-details-card ">
-          <!--start of the table here-->
-        <table class="table table-layout allif-details-table">
-          <tbody>
-        <tr>
-          <td>Asset</td>
-          <td>{{allifquery.asset}}</td>
-      
-          </tr>
-          <tr>
-            <td>Equity</td>
-            <td>{{allifquery.equity}}</td>
-        
-            </tr>
-          <tr>
-          <td>Created On</td>
-          <td>{{allifquery.date|date:'d/m/Y'}}</td>
-
-          </tr>
-               
-     
-        </tbody>
-        </table>
-      
-      </div>
-    </div>
-      
-      </div><!--end of row div --->
-        
-          </div>
 
 </div><!--end....table row-->
-
+</div>
 <!--end of table-->
-<hr>
+
+</div><!--end of main container of the page....-->
+
 <div class="row mt-12"> <!--start....table row-->
-   
-    <div class="allif-details-container">
+  
+  <div class="col-md-12"> <!--start....table column-->
+  <div class="allif-scroll-table">
+    <div class="allif-info-tables">
       <div class="row"><!--start of row div --->
-      
-        <!--start of column two-->
-        <div class="col-md-4">
-          <div class="delete-options-container">
-            <a href="{% url 'allifmaalcommonapp:commonBankShareholderDeposits' user_var glblslug %}">No</a>
-          </div>
-              </div>
-      
-           
-       <!--start of column two-->
-       <div class="col-md-4">
-        <div class="delete-options-container">
-         
-            <a href="{% url 'allifmaalcommonapp:commonBankShareholderDeposits' user_var glblslug %}">Back</a>
+  <!--start of column two-->
+  <div class="col-md-4">
     
+      <!--start of the table here-->
+      <div class="table-responsive">
+      <table class="table table-layout">
+      <tbody>
+    <tr>
+        <td>
+        <div class="delete-options-container">
+          <a href="{% url 'allifmaalcommonapp:commonBankShareholderDeposits' user_var glblslug %}">Back</a>
+        </div>
+        </td>
+      </tr>
+       
+        </tbody>
+        </table>
+      </div>
+        </div>
+           
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+       <!--start of the table here-->
+       <div class="allif-details-card table-responsive">
+       <table class="table table-layout">
+        <tbody>
+          <tr>
+            <td>
+            <div class="delete-options-container">
+              <a href="{% url 'allifmaalcommonapp:commonBankShareholderDeposits' user_var glblslug %}">No</a>
+            </div>
+            </td>
+          </tr>
+           
+         
+          </tbody>
+          </table>
+          </div>
+          </div>
+    
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+      <div class="allif-details-card table-responsive">
+       <!--start of the table here-->
+       <table class="table table-layout">
+        <tbody>
+          <tr>
+            <td>
+            <div class="delete-options-container">
+              <a href="{% url 'allifmaalcommonapp:commonDeleteBankShareholderDeposit' allifquery.id user_var glblslug %}" class="body-delete-link">Yes</a></li>
+            </div>
+            </td>
+          </tr>
+          </tbody>
+          </table>
+  </div>
+    </div>
+    </div><!--end of row div --->
       
         </div>
-            </div>
-      
-      
-       <!--start of column two-->
-       <div class="col-md-4">
-        <div class="delete-options-container-delete">
-           <a href="{% url 'allifmaalcommonapp:commonDeleteBankShareholderDeposit' allifquery.id user_var glblslug %}" class="body-delete-link">Yes</a></li>
-          
-      </div>
-    </div>
-      
-      </div><!--end of row div --->
-        
-          </div>
 
 </div><!--end....table row-->
-
+</div>
 <!--end of table-->
-<hr>
 
+</div><!--end of main container of the page....-->
 
+</div>
 </div>
   {% block scripts %}
 
   {% endblock %}
    {% endblock %}
- 
+   
