--- a/allifmaalcommonapp/templates/allifmaalcommonapp/banks/deposits/shareholders/deposit-details-sh.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/banks/deposits/shareholders/deposit-details-sh.html
@@ -6,254 +6,230 @@
 {% block style %}
 {%endblock%}
 {% block body %}
+
+<div class="allifmaal-main-container">
+  
 <!--start....main headere-->
 <div class="card-header">
 
-  <div class="row mt-12" ><!--start....header row-->
-  
-  <div class="col-md-12"><!--start....header column-->
-  
-  <div class="container-fluid amel-content-header">
-    <div class="dropdown allifmaal-content-dropdown">
-      <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-      Actions
-      </a>
-      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-        <div class="content-dropdown-menu">
-          <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonEditBankShareholderDeposit' allifquery.id user_var glblslug %}">Edit Deposit</a></li>
-          
-          <li><a class="dropdown-item body-delete-link" href="{% url 'allifmaalcommonapp:commonWantToDeleteDeposit' allifquery.id user_var glblslug %}">Delete Deposit</a></li>
-      
-       </div>
-      </ul>
-    </div>
-    
-    <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-    <a href="{% url 'allifmaalcommonapp:commonBanks' user_var glblslug %}">Banks</a>
-    <a href="{% url 'allifmaalcommonapp:commonAddBank' user_var glblslug %}">New Bank</a>
-  
-  <a href="{% url 'allifmaalcommonapp:commonhrm' user_var glblslug %}">HRM</a>
-  
-  <div class="dropdown allifmaal-content-dropdown">
-    <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-    Accounts
-    </a>
-    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-      <div class="content-dropdown-menu">
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonGeneralLedgers' user_var glblslug %}">GL Accounts</a></li>
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonChartofAccounts' user_var glblslug %}">Chart of A/Cs</a></li>
-      
-      </div>
-    </ul>
-  </div>
-  <a href="{% url 'allifmaalcommonapp:commonSuppliers' user_var glblslug %}" >Suppliers</a>
-  <div class="dropdown allifmaal-content-dropdown">
-    <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-    Banks
-    </a>
-    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-      <div class="content-dropdown-menu">
-      <li><a  class="dropdown-item" href="{% url 'allifmaalcommonapp:commonBanks' user_var glblslug %}">Banks</a></li>
-      <li><a  class="dropdown-item" href="{% url 'allifmaalcommonapp:commonBankShareholderDeposits' user_var glblslug %}">Deposits</a>
-        </li>
-      <li><a href="{% url 'allifmaalcommonapp:commonBankWithdrawals' user_var glblslug %}">Withdrawals</a></li>
-      </div>
-    </ul>
-  </div>
-  <a href="{% url 'allifmaalcommonapp:commonDepartments' user_var glblslug %}">Departments</a>
-  </div>
-  
-      </div><!--end....header column-->
-    
-    </div><!--end....header row-->
-  
-  </div><!--end....main headere-->
+<div class="row mt-12" ><!--start....header row-->
 
-<div class="allifmaincontainer">
-  <div class="row mt-12"> <!--start....table row-->
-    <div class="table-details-content-description">{{allifquery}}</div>
-    <div class="allif-details-container">
+<div class="col-md-12"><!--start....header column-->
+
+<div class="container-fluid amel-content-header">
+<div class="dropdown allifmaal-content-dropdown">
+  <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+  Actions
+  </a>
+  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+    <div class="content-dropdown-menu">
+      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonEditBankShareholderDeposit' allifquery.id user_var glblslug %}">Edit Item</a></li>
+          
+      <li><a class="dropdown-item body-delete-link" href="{% url 'allifmaalcommonapp:commonWantToDeleteDeposit' allifquery.id user_var glblslug %}">Delete Item</a></li>
+  
+   </div>
+  </ul>
+</div>
+
+<a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
+<a href="{% url 'allifmaalcommonapp:commonBanks' user_var glblslug %}">Banks</a>
+<a href="{% url 'allifmaalcommonapp:commonBankShareholderDeposits' user_var glblslug %}">Deposits</a>
+<a href="{% url 'allifmaalcommonapp:commonBankWithdrawals' user_var glblslug %}">Withdrawals</a>
+</div>
+
+    </div><!--end....header column-->
+  
+  </div><!--end....header row-->
+ </div>
+    <div class="allifmaincontainer">
+<div class="row mt-12"> <!--start....table row-->
+  <div class="table-details-content-description">{{allifquery}} Details</div>
+  <div class="col-md-12"> <!--start....table column-->
+  <div class="allif-scroll-table">
+    <div class="allif-info-tables">
       <div class="row"><!--start of row div --->
+  <!--start of column two-->
+  <div class="col-md-4">
+    
+      <!--start of the table here-->
+      <div class="table-responsive">
+      <table class="table table-layout">
+      <tbody>
+       
+      <tr>
+        <td class="allif-fix-table-col">Company</td>
+        <td>{{allifquery.company}}</td>
+    
+        </tr>
+        <tr>
+          <td class="allif-fix-table-col">Division</td>
+          <td> {{allifquery.division}}</td>
       
-        <!--start of column two-->
-        <div class="col-md-4">
-          <div class="allif-details-card ">
-            <!--start of the table here-->
-          <table class="table allif-details-table table-layout">
-            <tbody>
+          </tr>
           <tr>
-            <td>Company</td>
-            <td>{{allifquery.company}}</td>
+            <td class="allif-fix-table-col">Branch</td>
+            <td> {{allifquery.branch}}</td>
         
             </tr>
-            <tr>
-            <td>Division</td>
-            <td>{{allifquery.division}}</td>
+          <tr>
+            <td class="allif-fix-table-col">Department</td>
+            <td> {{allifquery.department}}</td>
         
             </tr>
-            <tr>
-            <td>Branch</td>
-            <td>{{allifquery.branch}}</td>
+
+               
+        </tbody>
+        </table>
+      </div>
+        </div>
+           
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+       <!--start of the table here-->
+       <div class="allif-details-card table-responsive">
+       <table class="table table-layout">
+        <tbody>
+          
+          <tr>
+            <td class="allif-fix-table-col">Description</td>
+            <td> {{allifquery.description}}</td>
         
             </tr>
+
             <tr>
-              <td>Department</td>
-              <td>{{allifquery.department}}</td>
+              <td class="allif-fix-table-col">Amount</td>
+              <td> {{allifquery.amount|floatformat:2|intcomma}}</td>
           
               </tr>
+          <tr>
+            <td class="allif-fix-table-col">Bank</td>
+            <td> {{allifquery.bank}}</td>
+        
+            </tr>
+            <tr>
+              <td class="allif-fix-table-col">Comments</td>
+              <td> {{allifquery.comments}}</td>
           
+              </tr>
+             
+           
           </tbody>
           </table>
-        
           </div>
-              </div>
-      
-           
-       <!--start of column two-->
-       <div class="col-md-4">
-        <div class="allif-details-card ">
-          <!--start of the table here-->
-        <table class="table table-layout allif-details-table">
-          <tbody>
-        <tr>
-          <td>Description</td>
-          <td>{{allifquery.description}}</td>
-      
-          </tr>
+          </div>
+    
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+      <div class="allif-details-card table-responsive">
+       <!--start of the table here-->
+       <table class="table table-layout">
+        <tbody>
           <tr>
-            <td>Amount</td>
-            <td>{{allifquery.amount|intcomma}}</td>
+            <td class="allif-fix-table-col">Owner</td>
+            <td> {{allifquery.owner}}</td>
         
             </tr>
-        <tr>
-          <td>Bank</td>
-          <td>{{allifquery.bank}}</td>
-      
-          </tr>
-          <tr>
-              <td>Comments</td>
-              <td>{{allifquery.comments}}</td>
+
+            <tr>
+              <td class="allif-fix-table-col">Asset</td>
+              <td> {{allifquery.asset}}</td>
           
               </tr>
-       
+              <tr>
+                <td class="allif-fix-table-col">Equity</td>
+                <td> {{allifquery.equity}}</td>
+            
+                </tr>
+
+
+      
+          <tr>
+            <td class="allif-fix-table-col">Date</td>
+            <td>{{allifquery.date|date:'d/m/Y'}}</td>
         
-        </tbody>
-        </table>
+            </tr>
+           
+          </tbody>
+          </table>
+  </div>
+    </div>
+    </div><!--end of row div --->
       
         </div>
-            </div>
-      
-      
-       <!--start of column two-->
-       <div class="col-md-4">
-        <div class="allif-details-card ">
-          <!--start of the table here-->
-        <table class="table table-layout allif-details-table">
-          <tbody>
-          <tr>
-            <td>Owner</td>
-            <td>{{allifquery.owner}}</td>
-        
-            </tr>
-            
-        <tr>
-          <td>Asset</td>
-          <td>{{allifquery.asset}}</td>
-      
-          </tr>
-          <tr>
-            <td>Equity</td>
-            <td>{{allifquery.equity}}</td>
-        
-            </tr>
-          <tr>
-          <td>Created On</td>
-          <td>{{allifquery.date|date:'d/m/Y'}}</td>
-
-          </tr>
-               
-     
-        </tbody>
-        </table>
-      
-      </div>
-    </div>
-      
-      </div><!--end of row div --->
-        
-          </div>
 
 </div><!--end....table row-->
-
-<!--end of table-->
-
-
-  <div class="row mt-12"> <!--start....table row-->
-    <div class="allif-details-container">
-      <div class="row"><!--start of row div --->
-      
-        <!--start of column two-->
-        <div class="col-md-12">
-          <div class="allif-details-card ">
-            <!--start of the table here-->
-            <div class="table-content-description">Bank Deposit</div>
-          <table class="table table-layout allif-details-table">
-           
-              <thead>
-                <tr class="allif-table-header-row">
-                  <td>Description</td>
-                  <td>Amount</td>
-                  <td>Bank</td>
-                  <td>Account</td>
-                  <td>Date</td>
-                 
-                </tr>
-                </thead>
-                <tbody class="allif-table-body">
-                 
-                  <tr>
-      
-                    <td>
-                    <a href="{% url 'allifmaalcommonapp:commonBankShareholderDepositDetails' allifquery.id user_var glblslug %}" class="allif-table-links">
-                    {{allifquery.description}}
-                    </a></td>
-                    
-                    <td>
-                    {{allifquery.amount|intcomma}}
-                   </td>
-                   
-                   <td>
-                    {{allifquery.bank}}
-                   </td>
-                   <td>
-                    {{allifquery.bank.account}}
-                   </td>
-                   <td>
-                    {{allifquery.date|date:'d/m/Y'}}
-                   </td>
-                   
-                    </tr>
-                </tbody>
-                  </table>
-      
-      </div><!--end of row div --->
-        
-          </div>
-
-</div><!--end....table row-->
-
+</div>
 <!--end of table-->
 
 </div><!--end of main container of the page....-->
+
+<div class="row mt-12"> <!--start....table row-->
+  <div class="col-md-12"> <!--start....table column-->
+    <div class="allif-scroll-table">
+      <div class="table-responsive allif-full-table">
+      <table class="table table-layout">
+        <thead>
+          <tr class="allif-table-header-row">
+          <td class="allif-fix-table-col">Account</td>
+          <td>Description</td>
+         
+          <td>Navigate</td>
+          
+          <td> . . . </td>
+          <td></td>
+          </tr>
+          </thead>
+          <tbody class="allif-table-body">
+           
+          
+          {% for item in allifqueryset %} 
+          <tr data-id="{{item.id}}">
+          <td class="allif-fix-table-col"><a class="allif-table-links" href="">{{item.description}}</a></td>
+          
+            <td>
+            {{item.balance}}
+           </td>
+           
+          <td>
+            <div class="dropdown allifmaal-content-dropdown">
+              <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Options</a>
+              <div class="dropdown-content">
+                <a href="" class="dropdown-item" id="allif-table-drop-item-link">Edit Item</a>
+                <a href="#" onclick="confirmDelete(this)" class="dropdown-item" id="allif-table-drop-item-link-delete">Delete Item</a>
+                
+              </div>
+            </div>
+            <div class="dropdown allif-confirm-action">
+              
+              <a href="" id="allif-table-drop-item-link">No</a><span><strong> | </strong></span>
+              <a href="" id="allif-confirm-delete">Confirm</a>
+            </div>
+  
+           
+          </td>
+  
+         <td> . . . </td>
+         <td></td>
+        </tr>
+        {% endfor %}
+        </tbody>
+      </table>
+      </div>
+     </div>
+
+</div><!--end....table column-->
+
+</div><!--end....table row-->
+
+
+</div>
+
+</div>
   {% block scripts %}
 
   {% endblock %}
    {% endblock %}
    
-
-
-
-
-
-
 
