--- a/allifmaalcommonapp/templates/allifmaalcommonapp/banks/deposits/shareholders/deposits-sh.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/banks/deposits/shareholders/deposits-sh.html
@@ -6,7 +6,7 @@
 {% block style %}
 {%endblock%}
 {% block body %}
-
+<div class="allifmaal-main-container">
 <!--start....main headere-->
 <div class="card-header">
 
@@ -98,19 +98,7 @@
     <a href="{% url 'allifmaalcommonapp:commonAddBankShareholderDeposit' user_var glblslug %}">New Deposit</a>
     <a href="{% url 'allifmaalcommonapp:commonBankWithdrawals' user_var glblslug %}">Withdrawals</a>
   
-  <div class="dropdown allifmaal-content-dropdown">
-    <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-    Modules
-    </a>
-    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-      <div class="content-dropdown-menu">
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonSuppliers' user_var glblslug %}" >Suppliers</a></li>
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonCustomers' user_var glblslug %}" >Customers</a></li>
-     
-    </div>
-    </ul>
-  </div>
-  <a href="{% url 'allifmaalcommonapp:commonTasks' user_var glblslug %}">Tasks</a>
+  
   </div>
   
       </div><!--end....header column-->
@@ -121,91 +109,127 @@
 
 <div class="allifmaincontainer"> 
 <div class="row mt-12"> <!--start....table row-->
-
-  
   <div class="col-md-12"> <!--start....table column-->
-  
-    <div class="allif-scroll-table"> 
-      <div class="table-content-description">{{title}}</div>
-    <table class="table table-layout">
-    <thead>
-      <tr class="allif-table-header-row" >
-        <td>Description</td>
-        <td>Amount</td>
-      <td>Bank Name</td>
-      <td>Account</td>
-      
-      <td>Balance</td>
-      <td>BU</td>
-      <td>Date</td>
-    
-    
-      </tr>
-      </thead>
-      <tbody class="allif-table-body">
-       
-           
-      {% for item in allifqueryset %}   
-      <tr>
-      
-      <td>
-      <a href="{% url 'allifmaalcommonapp:commonBankShareholderDepositDetails' item.id user_var glblslug %}" class="allif-table-links">
-      {{item.description}}
-      </a></td>
-      <td>
-        {{item.amount|intcomma}}
-       </td>
-      <td>
-        {{item.bank}}
-       </td>
-      <td>
-        {{item.bank.account}}
-       </td>
-      
-     
-     <td>
-      {{item.bank.balance|intcomma}}
-     </td>
-     <td>
-      {{item.department}}
-     </td>
-     <td>
-      {{item.date|date:'d/m/Y'}}
-     </td>
-     
-      </tr>
-        {% endfor %}
 
-        {% if searched_data %}
-        {% for item in searched_data %}   
-        <tr>
-      
+    <div class="allif-scroll-table">
+      <div class="table-responsive allif-full-table">
+      <table class="table table-layout">
+        <thead>
+          <tr class="allif-table-header-row">
+          <td class="allif-fix-table-col">Description</td>
+         
+         
+          <td>Amount</td>
+        <td>Bank Name</td>
+        <td>Account</td>
+        
+        <td>Date</td>
+       
+          <td>Navigate</td>
+          
+          <td> . . . </td>
+          <td></td>
+          </tr>
+          </thead>
+          <tbody class="allif-table-body">
+           
+          
+          {% for item in allifqueryset %} 
+          <tr data-id="{{item.id}}">
+          <td class="allif-fix-table-col"><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonBankShareholderDepositDetails' item.id user_var glblslug %}">{{item.description}}</a></td>
+           
           <td>
-          <a href="{% url 'allifmaalcommonapp:commonBankShareholderDepositDetails' item.id user_var glblslug %}" class="allif-table-links">
-          {{item.bank}}
-          </a></td>
-          <td>
+            {{item.amount|floatformat:2|intcomma}}
+           </td>
+           <td>
+            {{item.bank}}
+           </td>
+          
+           
+            <td>
             {{item.bank.account}}
            </td>
-          <td>
-          {{item.amount|intcomma}}
-         </td>
+           <td>
+            {{item.date|date:'d/m/Y'}}
+           </td>
+          
+           <td>
+            <div class="dropdown allifmaal-content-dropdown">
+              <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Options</a>
+              <div class="dropdown-content">
+                <a href="{% url 'allifmaalcommonapp:commonEditBankShareholderDeposit' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Item</a>
+                <a href="#" onclick="confirmDelete(this)" class="dropdown-item" id="allif-table-drop-item-link-delete">Delete Item</a>
+                 
+              </div>
+            </div>
+            <div class="dropdown allif-confirm-action">
+              
+              <a href="{% url 'allifmaalcommonapp:commonBankShareholderDeposits' user_var glblslug %}" id="allif-table-drop-item-link">No</a><span><strong> | </strong></span>
+              <a href="{% url 'allifmaalcommonapp:commonDeleteBankShareholderDeposit' item.id user_var glblslug %}" id="allif-confirm-delete">Confirm</a>
+            </div>
+  
+           
+          </td>
+          
          
+         <td> . . . </td>
+         <td></td>
+        
+    
+      </tr>
+      {% endfor %}
+      {% if searched_data %}
+      {% for item in searched_data %}
+      <tr data-id="{{item.id}}">
+        <td class="allif-fix-table-col"><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonBankShareholderDepositDetails' item.id user_var glblslug %}">{{item.description}}</a></td>
+         
+        <td>
+          {{item.amount|floatformat:2|intcomma}}
+         </td>
          <td>
-          {{item.bank.balance|intcomma}}
+          {{item.bank}}
+         </td>
+        
+         
+          <td>
+          {{item.bank.account}}
          </td>
          <td>
           {{item.date|date:'d/m/Y'}}
          </td>
+        
+         <td>
+          <div class="dropdown allifmaal-content-dropdown">
+            <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Options</a>
+            <div class="dropdown-content">
+              <a href="{% url 'allifmaalcommonapp:commonEditBankShareholderDeposit' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Item</a>
+              <a href="#" onclick="confirmDelete(this)" class="dropdown-item" id="allif-table-drop-item-link-delete">Delete Item</a>
+               
+            </div>
+          </div>
+          <div class="dropdown allif-confirm-action">
+            
+            <a href="{% url 'allifmaalcommonapp:commonBankShareholderDeposits' user_var glblslug %}" id="allif-table-drop-item-link">No</a><span><strong> | </strong></span>
+            <a href="{% url 'allifmaalcommonapp:commonDeleteBankShareholderDeposit' item.id user_var glblslug %}" id="allif-confirm-delete">Confirm</a>
+          </div>
+
          
-          </tr>
-          {% endfor %}
-          {% endif %}
-     
-      </tbody>
-        </table>
-    
+        </td>
+        
+       
+       <td> . . . </td>
+       <td></td>
+      
+  
+    </tr>
+      {% endfor %}
+        {% endif %}
+  
+        </tbody>
+      </table>
       </div>
+     </div>
+
       
       </div><!--end....table column-->
   </div>
